# api/docs/swagger.json
@@ -49,12 +49,12 @@
                 "summary": "Login",
                 "parameters": [
                     {
-                        "description": "pre login input",
+                        "description": "Login input",
                         "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.PreLoginInput"
+                            "$ref": "#/definitions/dto.UserLoginInput"
                         }
                     }
                 ],
@@ -119,7 +119,7 @@
                 }
             }
         },
-        "/user": {
+        "/profile": {
             "get": {
                 "security": [
                     {
@@ -129,12 +129,12 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Get User",
+                "summary": "Get User Profile",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserInfo"
+                            "$ref": "#/definitions/dto.UserProfile"
                         }
                     },
                     "400": {
@@ -156,7 +156,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/user": {
             "post": {
                 "tags": [
                     "User"
@@ -442,34 +444,6 @@
                 }
             }
         },
-        "dto.PreLoginInput": {
-            "type": "object",
-            "required": [
-                "email"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.PreLoginResponse": {
-            "type": "object",
-            "properties": {
-                "kdfAlgorithm": {
-                    "$ref": "#/definitions/entity.KdfAlgorithm"
-                },
-                "kdfIterations": {
-                    "type": "integer"
-                },
-                "kdfMemory": {
-                    "type": "integer"
-                },
-                "kdfParallelism": {
-                    "type": "integer"
-                }
-            }
-        },
         "dto.UpdateFolderInput": {
             "type": "object",
             "required": [
@@ -484,23 +458,6 @@
                 },
                 "icon": {
                     "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.UserInfo": {
-            "type": "object",
-            "properties": {
-                "avatar": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -529,6 +486,35 @@
             ],
             "properties": {
                 "refreshToken": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UserProfile": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "preferences": {
+                    "$ref": "#/definitions/model.UserPreferencesModel"
+                },
+                "pwdHint": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -583,6 +569,41 @@
                 "Argon2"
             ]
         },
+        "entity.UserLanguage": {
+            "type": "string",
+            "enum": [
+                "en",
+                "vi"
+            ],
+            "x-enum-varnames": [
+                "English",
+                "Vietnamese"
+            ]
+        },
+        "entity.UserThemeMode": {
+            "type": "string",
+            "enum": [
+                "light",
+                "dark",
+                "system"
+            ],
+            "x-enum-varnames": [
+                "Light",
+                "Dark",
+                "System"
+            ]
+        },
+        "entity.VaultAction": {
+            "type": "string",
+            "enum": [
+                "lock",
+                "logout"
+            ],
+            "x-enum-varnames": [
+                "Lock",
+                "Logout"
+            ]
+        },
         "model.Folder": {
             "type": "object",
             "properties": {
@@ -606,6 +627,50 @@
                 },
                 "userId": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.UserPreferencesModel": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "kdfAlgorithm": {
+                    "$ref": "#/definitions/entity.KdfAlgorithm"
+                },
+                "kdfIterations": {
+                    "type": "integer"
+                },
+                "kdfMemory": {
+                    "type": "integer"
+                },
+                "kdfParallelism": {
+                    "type": "integer"
+                },
+                "kdfSalt": {
+                    "type": "string"
+                },
+                "language": {
+                    "$ref": "#/definitions/entity.UserLanguage"
+                },
+                "theme": {
+                    "$ref": "#/definitions/entity.UserThemeMode"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "integer"
+                },
+                "vaultTimeout": {
+                    "type": "integer"
+                },
+                "vaultTimeoutAction": {
+                    "$ref": "#/definitions/entity.VaultAction"
                 }
             }
         }
