# api/internal/user/delivery/rest/auth.go
@@ -6,45 +6,18 @@ import (
 	"github.com/dynonguyen/keychi/api/internal/common"
 	"github.com/dynonguyen/keychi/api/internal/service"
 	"github.com/dynonguyen/keychi/api/internal/user/dto"
-	"github.com/dynonguyen/keychi/api/internal/user/repository"
 	"github.com/dynonguyen/keychi/api/internal/user/usecase"
 	"github.com/labstack/echo/v4"
 )
 
-// @Summary Pre Login
-// @Tags User
-// @Param user body dto.UserLoginInput true "User login input"
-// @Success 200 {object} dto.PreLoginResponse
-// @Failure 400 {object} common.AppError
-// @Failure 500 {object} common.AppError
-// @Router /login [post]
-func HandlePreLogin(authSvc service.AuthService, repo repository.AuthRepository) echo.HandlerFunc {
-	return func(c echo.Context) error {
-		var body dto.PreLoginInput
-
-		if err := (&echo.DefaultBinder{}).BindBody(c, &body); err != nil {
-			return c.JSON(http.StatusBadRequest, common.NewBadRequestError(err, common.CodeBadRequestError))
-		}
-
-		uc := usecase.NewAuthUsecase(authSvc, repo)
-		preLoginSetting, err := uc.PreLogin(c.Request().Context(), &body)
-
-		if err != nil {
-			return c.JSON(common.GetAppErrorStatus(err, http.StatusInternalServerError), err)
-		}
-
-		return c.JSON(http.StatusOK, common.NewOkResponse(&preLoginSetting))
-	}
-}
-
 // @Summary Login
 // @Tags User
-// @Param user body dto.PreLoginInput true "pre login input"
+// @Param user body dto.UserLoginInput true "Login input"
 // @Success 200 {object} dto.UserToken
 // @Failure 400 {object} common.AppError
 // @Failure 500 {object} common.AppError
 // @Router /login [post]
-func HandleLogin(authSvc service.AuthService, repo repository.AuthRepository) echo.HandlerFunc {
+func HandleLogin(authSvc service.AuthService) echo.HandlerFunc {
 	return func(c echo.Context) error {
 		var user dto.UserLoginInput
 
@@ -52,7 +25,7 @@ func HandleLogin(authSvc service.AuthService, repo repository.AuthRepository) ec
 			return c.JSON(http.StatusBadRequest, common.NewBadRequestError(err, common.CodeBadRequestError))
 		}
 
-		uc := usecase.NewAuthUsecase(authSvc, repo)
+		uc := usecase.NewAuthUsecase(authSvc)
 
 		userToken, err := uc.Login(c.Request().Context(), &user)
 
@@ -71,7 +44,7 @@ func HandleLogin(authSvc service.AuthService, repo repository.AuthRepository) ec
 // @Failure 400 {object} common.AppError
 // @Failure 500 {object} common.AppError
 // @Router /logout [post]
-func HandleLogout(authSvc service.AuthService, repo repository.AuthRepository) echo.HandlerFunc {
+func HandleLogout(authSvc service.AuthService) echo.HandlerFunc {
 	return func(c echo.Context) error {
 		var body dto.UserLogout
 
@@ -79,7 +52,7 @@ func HandleLogout(authSvc service.AuthService, repo repository.AuthRepository) e
 			return c.JSON(http.StatusBadRequest, common.NewBadRequestError(err, common.CodeBadRequestError))
 		}
 
-		uc := usecase.NewAuthUsecase(authSvc, repo)
+		uc := usecase.NewAuthUsecase(authSvc)
 
 		if err := uc.Logout(c.Request().Context(), body.RefreshToken); err != nil {
 			return c.JSON(common.GetAppErrorStatus(err, http.StatusUnauthorized), err)
