# shared/src/constants/endpoint.ts
@@ -1,7 +1,6 @@
 export const ENDPOINT = {
-  GET_USER: '/user',
+  GET_PROFILE: '/profile',
   POST_LOGIN: '/login',
-  POST_PRE_LOGIN: '/pre-login',
   POST_LOGOUT: '/logout',
   POST_REGISTER: '/user'
 };
