# shared/src/types/dto.type.ts
@@ -1,16 +1,9 @@
-import { UserSetting } from './entity.type';
-
 export type RegisterReqDto = {
   email: string;
   password: string;
   name: string;
   pwdHint: string;
 };
-
-export type PreLoginReqDto = {
-  email: string;
-};
-export type PreLoginRespDto = Pick<UserSetting, 'kdfAlgorithm' | 'kdfIterations' | 'kdfMemory' | 'kdfParallelism'>;
 
 export type LoginReqDto = {
   email: string;
